# unifr-master-ilids-alarms

./: .dvcignore  .gitignore  Makefile  SZTE.dvc  SZTR.dvc  dvc.yaml  pyproject.toml  pytest.ini
.dvc/: config
ckpt/actionclip/: .gitignore
data/: .dvcignore  .gitignore  SZTE.dvc  SZTR.dvc
data/handcrafted-metadata/: .gitignore  actionclip_sequences.csv  short_sequences.txt  szte_distractions.extended.corrected.csv  szte_distractions.extended.csv  tp_fp_sequences.csv
data/ilids-metadata/: alarms.csv  clips.csv  distractions.csv  meta.json  videos.csv
data/initial-ilids/: .dvcignore  .gitignore  Makefile  SZTE.dvc  SZTR.dvc  dvc.yaml
data/szte-metadata/: alarms.csv  distractions.csv  meta.json  videos.csv
data/sztr-metadata/: .gitignore  alarms.csv  clips.csv  distractions.csv  meta.json  videos.csv
ilids-metadata/: szte_clips_information.csv  szte_distractions.csv  szte_meta.txt  szte_videos.csv  szte_videos_description.txt  sztr_clipdata.csv  sztr_clips.csv  sztr_clips_information.csv  sztr_datastructure.csv  sztr_distractions.csv  sztr_index.json  sztr_libraries.csv  sztr_meta.txt
ilids-metadata-szte/: alarms.csv  clips.csv  distractions.csv  videos.csv
notebooks/: compress-resize-ilids-videos.ipynb  extract_sequences.ipynb  generate-sequences-alarms-FP.ipynb  ilids-annotations-preprocessing.ipynb  ilids-videos-details.ipynb  movinet_results_all.ipynb  review_actionclip_results.ipynb  towhee-classification.ipynb  videos-timing-study.ipynb
results/: .gitignore
results/actionclip/: .gitignore  Makefile  all-best-results.json  all-results.json  hparam.py  review_actionclip_results.py
results/actionclip/assets/: .gitignore  font-faces.css
results/actionclip/best_TN/: plot_best_result.ipynb  y.npy  y_true.npy
results/actionclip/best_roc/: y.npy
results/actionclip/hparam/: texts.py
results/actionclip/metrics/: confusion_matrix.py  pr.py  roc.py
results/actionclip/scripts/: join-results.js  package-lock.json  package.json  results-table.mustache
results/actionclip/utils/: tsne.py
results/actionclip/vit-b-16-16f/: results.json
results/actionclip/vit-b-16-32f/: results.json
results/actionclip/vit-b-16-8f/: results.json
results/actionclip/vit-b-32-8f/: results.json
results/movinet/: .gitignore  Makefile  _template_movinet_results.ipynb  _template_predicted_classes_for_walk_with_ladder.ipynb  all-classes-for-walk-with-ladder.csv  all-classes-for-walk-with-ladder.ipynb  all-results-FN-equals-0.csv  all-results-normalized.json  all-results.json  best-results.json  extract_decode_images_from_notebook.sh  movineta0-classes-for-walk-with-ladder-normalized.csv  movineta0-classes-for-walk-with-ladder.csv  movineta0-normalized.csv  movineta0-normalized.json  movineta0.csv  movineta0.json  movineta1-classes-for-walk-with-ladder-normalized.csv  movineta1-classes-for-walk-with-ladder.csv  movineta1-normalized.csv  movineta1-normalized.json  movineta1.csv  movineta1.json  movineta2-classes-for-walk-with-ladder-normalized.csv  movineta2-classes-for-walk-with-ladder.csv  movineta2-normalized.csv  movineta2-normalized.json  movineta2.csv  movineta2.json  movineta3-classes-for-walk-with-ladder-normalized.csv  movineta3-classes-for-walk-with-ladder.csv  movineta3-normalized.csv  movineta3-normalized.json  movineta3.csv  movineta3.json  movineta4-classes-for-walk-with-ladder-normalized.csv  movineta4-classes-for-walk-with-ladder.csv  movineta4-normalized.csv  movineta4-normalized.json  movineta4.csv  (+8 more)
scripts/: extract_metadata.py  generate-sequences-alarms-FP.py  generate_data_sequences_actionclip_list_file.py  initial_ilids.py
src/ilids/cli/: ffmpeg.py  ffprobe.py  mdb.py
src/ilids/commands/: __init__.py  experiments.py  ilids_indexes.py  ilids_videos.py  video_utils.py
src/ilids/datamodels/: ffprobe.py  szte.py  sztr.py
src/ilids/experiments/: actionclip.py  movinet.py
src/ilids/models/: __init__.py  data_frame_description.py  ffprobe.py  szte.py  sztr.py  utils.py
src/ilids/preprocessing/: common.py  encode_video.py  (+2 more)
tests/: conftest.py
tests/cli/: test_ffprobe.py  test_mdb.py
tests/commands/: test_experiments.py  test_ilids_indexes.py  test_ilids_videos.py  test_video_utils.py
tests/datamodels/: test_szte.py
tests/models/: test_szte.py
tests/subcommand/: test_mdb.py
tests/synchronization/: test_alternate_device.py  test_share_gpu_command.py
tests/towhee_utils/: test_cached_video_decoder.py
tests/understanding/: test_towhee.py
(+69 files in other folders)
