[tool.poetry]
name = "ilids"
version = "0.1.0"
description = "ilids-dataset-preprocessing"
authors = ["Alain Schaller <alain.schaller@unifr.ch>"]
packages = [{include = "ilids", from = "src"}]

[tool.poetry.dependencies]
chardet = "<5.0.0"
decord = {path = "build/decord/python"}
einops = "^0.4.1"
ipykernel = "^6.15.1"
joblib = "^1.1.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
Pillow = "^9.2.0"
pydantic = "^1.9.1"
python = ">=3.10,<3.12"
scikit-learn = "^1.1.2"
scipy = "^1.9.1"
towhee = "^0.8.0"
tqdm = "^4.64.0"
typer = {extras = ["all"], version = "^0.6.1"}
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^22.8.0"}
datamodel-code-generator = "^0.13.0"
isort = "^5.10.1"
mypy = "^0.971"
PyHamcrest = "^2.0.4"
pylint = "^2.15.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
taskipy = "^1.10.2"
vulture = "^2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ilids_cmd = 'ilids.commands:typer_app'

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.vulture]
min_confidence = 80
sort_by_size = true

[tool.taskipy.tasks]
format = "black src notebooks tests && isort src notebooks tests"
test = "pytest"

analyse = "task dead && task types && task lint"
dead = "vulture src tests --min-confidence 90"
lint = "pylint src tests"
types = "mypy src --ignore-missing-imports"
