[tool.poetry]
name = "ilids"
version = "0.1.0"
description = "ilids-dataset-preprocessing"
authors = ["Alain Schaller <alain.schaller@unifr.ch>"]
packages = [{include = "ilids", from = "src"}]

[tool.poetry.dependencies]
"towhee.models" = "^0.8.0"
chardet = "<5.0.0"
dash = "^2.6.2"
decord = {path = "build/decord/python"}
einops = "^0.4.1"
filelock = "^3.8.0"
Flask = "^2.2.2"
ipykernel = "^6.15.1"
joblib = "^1.1.0"
jupyter = "^1.0.0"
jupyter-dash = "^0.4.2"
matplotlib = "^3.5.3"
mlnotify = "^1.0.51"
open-clip-torch = "^2.0.2"
pandas = "^1.4.3"
Pillow = "^9.2.0"
plotly = "^5.10.0"
pydantic = "^1.9.1"
pynvml = "^11.4.1"
python = ">=3.10,<3.11"
pytorch-lightning = "^1.7.7"
scikit-learn = "^1.1.2"
scipy = "^1.9.1"
torch = "^1.12.1"
torchvision = "^0.13.1"
towhee = "^0.8.0"
tqdm = "^4.64.0"
typer = {extras = ["all"], version = "^0.6.1"}
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^22.8.0"}
datamodel-code-generator = "^0.13.0"
isort = "^5.10.1"
mypy = "^0.971"
PyHamcrest = "^2.0.4"
pylint = "^2.15.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
taskipy = "^1.10.2"
vulture = "^2.5"

[tool.poetry.group.dev.dependencies]
gdown = "^4.5.1"
papermill = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ilids_cmd = 'ilids.commands:typer_app'
ilids_sync = 'ilids.synchronization.share_gpu_command:typer_app'

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.vulture]
min_confidence = 80
sort_by_size = true

[tool.taskipy.tasks]
install-kernel = "python -m ipykernel install --user --name ilids-poetry-kernel"

format = "black src notebooks tests && isort src notebooks tests"
test = "pytest"

analyse = "task dead && task types && task lint"
dead = "vulture src tests --min-confidence 90"
lint = "pylint src tests"
types = "mypy src --ignore-missing-imports"
